<resources>
    <string name="app_name">Fortfrem</string>
    <string name="title_notifications">Powiadomienia</string>
    <string name="offers_tab_title">Oferty</string>
    <string name="favourites_tab_title">Ulubione</string>
    <string name="preferences_tab_title">Preferencje</string>
    <string name="profile_tab_title">Konto</string>
    <string name="example_popover_message">Example popover message</string>
    <string name="default_popover_accept">OK</string>
    <string name="offer_image">Offer image</string>
    <string name="store_image">Store image</string>
    <string name="app_logo">App Logo</string>
    <string name="log_in_screen_title">Zaloguj się</string>
    <string name="log_in_form_title">Zaloguj się</string>
    <string name="email_input_label">Email</string>
    <string name="password_input_label">Hasło</string>
    <string name="forgot_password_label">Nie pamiętam hasła</string>

    <string name="facebook_app_id">2985217481564884</string>
    <string name="fb_login_protocol_scheme">fb2985217481564884</string>
    <string name="login_email_button_text">Zaloguj się</string>
    <string name="login_google_button_text">Kontynuuj z kontem Google</string>
    <string name="register_link_label">Nie masz konta?</string>
    <string name="register_link">Zarejestruj się</string>
    <string name="login_terms_warn">Logując się akceptujesz Regulamin serwisu</string>
    <string name="register_screen_title">Załóż konto</string>
    <string name="agreement_text"><![CDATA[Akceptuję <a href=\'https://www.google.com\'>Regulamin serwisu</a> oraz <a href=\'https://www.google.com\'>Politykę prywatności</a>]]></string>
    <string name="login_agreement_text"><![CDATA[Logując się akceptujesz <a href=\'https://www.google.com\'>Regulamin serwisu</a> oraz <a href=\'https://www.google.com\'>Politykę prywatności</a>]]></string>
    <string name="register_button_text">Zarejestruj</string>
    <string name="confirm_password_label">Potwierdź hasło</string>
    <string name="login_link_label">Masz już konto?</string>
    <string name="login_link">Zaloguj się</string>
    <string name="auth_screen_title">Konto</string>
    <string name="register_form_title">Załóż konto przez adres email</string>
    <string name="field_required">To pole jest wymagane</string>
    <string name="password_too_short">Podane hasło jest zbyt krótkie</string>
    <string name="passwords_not_same">Podane hasła różnią się</string>
    <string name="registration_error_unknown">Rejestracja nieudana</string>
    <string name="email_not_valid">Podany adres email jest nieprawidłowy</string>
    <string name="registration_successfull">Konto zostało utworzone. Możesz teraz zalogować się do serwisu</string>
    <string name="login_failed_simple">Logowanie nieudane</string>
    <string name="login_with_email_form_title">Zaloguj się adresem email</string>
    <string name="user_profile_picture_desc">User profile picture</string>
    <string name="confirm_email_label">Potwierdź adres email</string>
    <string name="edit_profile_menu_item">Edytuj profil</string>
    <string name="settings_menu_item">Ustawienia</string>
    <string name="app_info_menu_item">O aplikacji</string>
    <string name="terms_of_use">Regulamin serwisu</string>
    <string name="privacy_policy_menu_item">Polityka Prywatności</string>
    <string name="log_out_menu_item">Wyloguj się</string>
    <string name="back_button">back button</string>
    <string name="option_icon">Option icon</string>
    <string name="add_to_favourtes">Add to favourtes</string>
    <string name="offer_details_screen_label">Szczegóły</string>
    <string name="no_description">Brak opisu</string>
    <string name="visit_offer_website">Zobacz w sklepie</string>
    <string name="find_store">Znajdź sklep</string>
</resources>
