<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_offers"
        android:icon="@drawable/ic_local_offer_black_24dp"
        android:title="@string/offers_tab_title" />

    <item
        android:id="@+id/navigation_favourites"
        android:icon="@drawable/ic_favorite_black_24dp"
        android:title="@string/favourites_tab_title" />

    <item
        android:id="@+id/navigation_preferences"
        android:icon="@drawable/ic_settings_black_24dp"
        android:title="@string/Preferences_tab_title" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_person_black_24dp"
        android:title="@string/profile_tab_title" />

    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_notifications" />

</menu>
