<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="58dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="20dp"
            android:paddingBottom="10dp">
            <ImageView
                android:id="@+id/app_logo"
                android:layout_width="128dp"
                android:layout_height="128dp"
                android:src="@drawable/app_logo"
                android:contentDescription="@string/app_logo"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_marginBottom="20dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@id/app_logo"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:text="@string/register_screen_title"
                />
        </androidx.constraintlayout.widget.ConstraintLayout>
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <com.shobhitpuri.custombuttons.GoogleSignInButton
                android:id="@+id/google"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:textSize="18sp"
                android:text="@string/login_google_button_text"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="20dp"
            android:paddingBottom="20dp">
            <TextView
                android:id="@+id/register_with_email_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:textSize="18sp"
                android:textStyle="bold"
                android:text="@string/register_form_title"/>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/email_input_container"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/register_with_email_label"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:boxBackgroundMode="outline"
                android:layout_marginTop="10dp">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/email_input"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/email_input_label"
                    android:inputType="textEmailAddress" />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/password_input_container"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/email_input_container"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:boxBackgroundMode="outline"
                android:layout_marginTop="15dp">
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="200dp"
                    android:id="@+id/password_input"
                    android:layout_height="wrap_content"
                    android:hint="@string/password_input_label"
                    android:inputType="textPassword" />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/confirm_password_input_container"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/password_input_container"
                app:errorEnabled="true"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:boxBackgroundMode="outline"
                android:layout_marginTop="15dp">
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="200dp"
                    android:id="@+id/confirm_password_input"
                    android:layout_height="wrap_content"
                    android:hint="@string/confirm_password_label"
                    android:inputType="textPassword" />
            </com.google.android.material.textfield.TextInputLayout>
            <LinearLayout
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:paddingTop="15dp"
                app:layout_constraintTop_toBottomOf="@id/confirm_password_input_container"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:orientation="horizontal"
                android:gravity="center_vertical">
                <CheckBox
                    android:id="@+id/agreement"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:id="@+id/agreement_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:clickable="true"
                    android:focusable="true" />
            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                android:id="@+id/submit"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:text="@string/register_button_text"
                android:drawableStart="@drawable/ic_person_black_24dp"
                android:drawablePadding="10dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:paddingStart="25dp"
                android:paddingEnd="25dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:textSize="18sp"
                android:background="@drawable/login_button_background"
                />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>
</ScrollView>