<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <ScrollView
        android:id="@+id/container"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:visibility="invisible">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <ImageView
                android:id="@+id/offer_image"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:contentDescription="@string/offer_image"
                android:src="@drawable/app_logo_round"
                android:adjustViewBounds="true"/>
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/offer_image"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:padding="10dp">
                <TextView
                    android:id="@+id/offer_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#000"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    />
                <TextView
                    android:id="@+id/category"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:textColor="@color/grey_font_color"
                    android:textStyle="italic"
                    app:layout_constraintTop_toBottomOf="@id/offer_title"
                    android:layout_marginTop="5dp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    android:text="Category / subcategory"/>
                <ImageButton
                    android:id="@+id/add_to_favourites"
                    android:background="@drawable/add_favourite_button"
                    android:adjustViewBounds="true"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_margin="10dp"
                    android:src="@drawable/ic_favorite_border_black_24dp"
                    android:contentDescription="@string/add_to_favourtes"
                    app:layout_constraintTop_toTopOf="@id/old_price"
                    app:layout_constraintBottom_toBottomOf="@id/price"
                    app:layout_constraintLeft_toLeftOf="parent"
                    android:layout_marginTop="10dp"/>
                <TextView
                    android:id="@+id/old_price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/category"
                    app:layout_constraintRight_toRightOf="parent"
                    android:layout_marginTop="10dp"
                    android:textColor="@color/grey_font_color"
                    android:textSize="16sp"/>
                <TextView
                    android:id="@+id/price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/old_price"
                    app:layout_constraintRight_toRightOf="parent"
                    android:layout_marginTop="5dp"
                    android:textColor="#000"
                    android:textStyle="bold"
                    android:textSize="20sp"/>
                <ImageView
                    android:id="@+id/store_logo"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:adjustViewBounds="true"
                    app:layout_constraintTop_toBottomOf="@id/price"
                    android:layout_marginTop="15dp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    android:contentDescription="@string/store_image"
                    android:src="@drawable/app_logo"/>
                <TextView
                    android:id="@+id/store_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#000"
                    app:layout_constraintLeft_toRightOf="@id/store_logo"
                    app:layout_constraintTop_toTopOf="@id/store_logo"
                    app:layout_constraintBottom_toBottomOf="@id/store_logo"
                    android:layout_marginStart="10dp"
                    android:textSize="20sp"/>
                <Button
                    android:id="@+id/visit_website"
                    android:layout_width="190dp"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_web_white_24dp"
                    android:drawablePadding="10dp"
                    android:text="@string/visit_offer_website"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/store_logo"
                    android:layout_marginTop="20dp"
                    android:textColor="@color/white_font"
                    android:background="@drawable/login_button_background"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"/>
                <Button
                    android:id="@+id/find_store"
                    android:layout_width="190dp"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_store_white_24dp"
                    android:text="@string/find_store"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/visit_website"
                    android:layout_marginTop="10dp"
                    android:textColor="@color/white_font"
                    android:background="@drawable/login_button_background"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"/>
            </androidx.constraintlayout.widget.ConstraintLayout>
            <TextView
                android:layout_margin="10dp"
                android:id="@+id/desc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#000"/>
        </LinearLayout>
    </ScrollView>
    <FrameLayout
        android:id="@+id/progress_bar_container"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <ProgressBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:indeterminate="true"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </FrameLayout>
</androidx.constraintlayout.widget.ConstraintLayout>